--- a/pom.xml
+++ b/pom.xml
@@ -3,18 +3,21 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.rabbitmq</groupId>
+	<artifactId>rabbitmq-sender</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
+	
+	<name>rabbitmq-sender</name>
+	<description>Demo project for Spring Boot to send message to rabbitmq</description>
+	
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.1.1.RELEASE</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.rabbitmq</groupId>
-	<artifactId>rabbitmq-sender</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>rabbitmq-sender</name>
-	<description>Demo project for Spring Boot to send message to rabbitmq</description>
-
+	
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
