--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ server:
     context-path: /rabbitmq
 spring:
   application:
-    name: rabbitmq producer
+    name: rabbitmq-producer
   rabbitmq:
     port: 5672
     host: localhost
